--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,15 +1,10 @@
 <%- include('partials/header'); -%>
 
-<header>
-  <div class="smoothie">
-    <img src="/smoothie.png" alt="">
-  </div>
-  <div class="headings">
-    <h2>Smoothie Recipes</h2>
-    <h3>By Ninjas For Ninjas</h3>
-    <a href="/smoothies" class="btn">View Recipes</a>
-  </div>
-</header>
+<div class="container">
+  <a href="/debit" class="btn btn-primary mt-3"> Debit Transactions</a>
+  <a href="/credit" class="btn btn-primary mt-3"> Credit Transactions</a>
+  <a href="/treat" class="btn btn-primary mt-3"> Treat Transactions</a>
+</div>
 
 
 <%- include('partials/footer'); -%>
