--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,4 @@
-/* google fonts */
+/*googlefonts*/
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 body{
@@ -29,9 +29,11 @@ nav ul{
   display: flex;
   align-items: center;
 }
+
 nav li{
   margin-left: 20px;
 }
+
 nav li a{
   text-transform: uppercase;
   font-weight: 700;
@@ -40,36 +42,58 @@ nav li a{
   padding: 10px 16px;
   letter-spacing: 2px;
 }
-.btn{
+/* .btn{
   border-radius: 36px;
   background: #FEE996;
-}
+} */
+
 form h2{
   font-size: 2.4em;
   font-weight: 900;
   margin-bottom: 40px;
 }
 form{
-  min-width: 300px;
-  max-width: 350px;
+  width: 90%;
   margin: 0 auto;
   padding: 30px;
   box-shadow: 1px 2px 3px rgba(0,0,0,0.1);
-  border-radius: 10px;
   background: white;
 }
+
+.separate-section,
+.separate-section-password{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+  
+
+.separate-section-password > label{
+  width: 30%;
+}
+
 input{
+  display: block;
   padding: 10px 12px;
   border-radius: 4px;
   border: 1px solid #ddd;
   font-size: 1em;
   width: 100%;
 }
-label{
-  display: block;
-  margin: 20px 0 10px;
+
+input[type=submit]:hover {
+  cursor: pointer;
+  background-color: rgb(212, 212, 212);
 }
-button{
+
+
+label{
+  display: inline-block;
+  margin: 20px 10px;
+  width: 47%;
+}
+
+form > button{
   margin-top: 30px;
   border-radius: 36px;
   background: #FEE996;
@@ -137,4 +161,7 @@ footer{
   text-align: center;
   margin-top: 120px;
   color: #aaa;
+}
+.class-form{
+  width: 100%; 
 }
