--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header'); -%>
 
-<form action="/">
+<form action="/login" method='post' class="login">
   <h2>Login</h2>
   <label for="email">Email</label>
   <input type="text" name="email"  />
@@ -12,4 +12,3 @@
 </form>
 
 <%- include('partials/footer'); -%>
-</script>
