--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,16 +1,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/styles.css">
+  <title>Tracker</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/styles.css">
+  <script src="javascript/index.js" type="application/javascript"></script>
+  <script src="javascript/debitRecords.js" type="application/javascript"></script>
+
+  <!-- <script src="javascript/students.js"></script> -->
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    
-    <h1>Tracker</h1>
-    <ul>
-    </ul>
+  <nav>
+    <h1><a href="/">Tracker</a></h1>
   </nav>
   
